--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,33 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Package Files 
 *.jar
 *.war
 *.ear
 *.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# IDE Files #
+.classpath
+.project
+.settings/
+.idea/
+*.iml
+
+dist
+build
+bin
+4cc.checksum
+*.class
+target/
+test-output/
+build.xml
+/.metadata
+dist
+build
+bin
+/tests/
+/coverage/
+/cobertura.ser
+*/temp_persist_config_*.xml
+*/src/main/resources/buildinfo.properties
+*/*.ipr
+*/*.iws
+
